diesel_compile_tests/tests/ui/identifiable_missing_pk_field.stderr
error: No field with column name id
  --> $DIR/identifiable_missing_pk_field.rs:10:10
   |
10 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name id
  --> $DIR/identifiable_missing_pk_field.rs:15:10
   |
15 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:22:10
   |
22 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name baz
  --> $DIR/identifiable_missing_pk_field.rs:28:10
   |
28 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:36:10
   |
36 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: No field with column name bar
  --> $DIR/identifiable_missing_pk_field.rs:43:10
   |
43 | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^

error: aborting due to 6 previous errors

